--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -14,6 +14,13 @@
     }
 }
 
+@media( max-width:768px ) {
+    .navbar-nav {
+        flex-direction: column;
+        padding-bottom: 5px;
+    }
+}
+
 
 /* Tablet Layout */
 
@@ -21,6 +28,7 @@
     .caption h1 {
         font-size: 35px;
     }
+    
     .navbar-nav li a {
         padding: 15px 5px;
     }
@@ -205,6 +213,7 @@
     }
     .choose-box.left i.fa {
         float: left;
+        margin-left: 0;
     }
 
     .testimonial-content {
