--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,6 +41,22 @@
 14. Footer area css
 
 -------------------------------------------------------------------------------------- */
+/* Colors */
+:root {
+    --white:    #fff;
+    --gray-100: #e1e1e6;
+    --gray-300: #c4c4cc;
+    --gray-400: #8d8d99;
+    --gray-600: #323238;
+    --gray-700: #29292e;
+    --gray-800: #202024;
+    --gray-900: #121214;
+
+    --blue-300: #72ade4;
+    --green-500: #3f8ed9;
+
+    --red-500: #F75A68 
+}
 
 
 
@@ -84,6 +100,8 @@
 
 
 
+
+
 /* ----------------------------------------------------------------------------------------
 *                                       01. General css
 * -------------------------------------------------------------------------------------- */
@@ -94,6 +112,7 @@ body {
 }
 
 body {
+    background-color: var(--gray-900);
     color: #777;
     width: 100%;
     height: 100%;
@@ -109,7 +128,7 @@ h3,
 h4,
 h5,
 h6 {
-    color: #555;
+    color: var(--gray-100);
     font-family: 'GothamRounded-Bold';
 }
 
@@ -252,10 +271,10 @@ fieldset {
     width: 100%;
     height: 100%;
     overflow: visible;
-    background-image: url(../img/preloader.gif);
+    background-image: url(../img/preloader-dark.gif);
     background-position: center center;
     background-repeat: no-repeat;
-    background-color: #fff;
+    background-color: #040204;
 }
 
 .table {
@@ -285,7 +304,7 @@ img {
 *                               02. Navigation area css
 * --------------------------------------------------------------------------------------- */
 .menu-area {
-    background: #fff;
+    background: var(--gray-600);
 }
 .sticky-menu {
     box-shadow: 0px 3px 4.7px 0.3px rgba(0, 0, 0, 0.24);
@@ -306,22 +325,14 @@ img {
 .navbar {
     margin-bottom: 0;
     border: 0px;
+    padding: 8px 0;
 }
 
-.navbar-brand {
-    display: block;
-    color: #3f8ed9;
-    text-transform: uppercase;
-    font-family: 'GothamRounded-Bold';
-    font-size: 36px;
-    padding: 15px 0;
+.img-logo{
+    height: 50px;
+    filter: grayscale(80%) !important;
 }
-.navbar-brand span {
-    color: #72849c;
-}
-.navbar-brand:hover {
-    color: #3f8ed9;
-}
+
 
 .navbar-nav {
     display: flex;
@@ -338,7 +349,7 @@ img {
     font-weight: 600;
     font-size: 15px;
     letter-spacing: 1px;
-    color: #333;
+    color: var(--gray-300);
 }
 
 .nav > li > a:hover,
@@ -348,13 +359,19 @@ img {
 }
 
 .mainmenu .navbar-nav li.active a {
-    color: #3f8ed9;
+    color: var(--white);
+}
+
+.navbar-brand {
+    float: left;
+    padding: 5px;
+    line-height: normal;
 }
 
 
 /* Mobile Nav css */
 .navbar-toggle .icon-bar {
-    background: #3f8ed9;
+    background: var(--gray-900);
 }
 
 .toggle-lang:hover {
@@ -366,8 +383,8 @@ img {
 * -------------------------------------------------------------------------------------- */
 
 .slider-area {
-    background: rgb(63,142,217);
-    background: linear-gradient(90deg, rgba(63,142,217,1) 5%, rgba(31,73,113,1) 100%);
+    background: var(--gray-900);
+    background: linear-gradient(90deg, var(--gray-900) 35%, var(--gray-700) 100%);
     min-height: 400px;
 }
 
@@ -461,15 +478,16 @@ img {
 * ---------------------------------------------------------------------------------------*/
 
 .hero-boxes {
-    padding-top: 50px;
+    padding: 50px 0;
+    background-color: var(--gray-900);
 }
 
 .hero-box {
     background: #f5f5f5;
-    background-color: #3f8ed9;
+    background-color: var(--gray-600);
     text-align: center;
     position: relative;
-    margin-top: 30px;
+    margin: 30px 0;
     padding: 50px;
     border-radius: 10px;
 }
@@ -482,7 +500,7 @@ img {
     top: 0;
     width: 100%;
     height: 0;
-    background-color: #72849c;
+    background-color: var(--gray-800);
     color: #fff;
     border-radius: 10px;
     opacity: 0;
@@ -607,6 +625,7 @@ img {
 
 .service-area {
     padding-bottom: 30px;
+    background-color: var(--gray-800);
 }
 
 .service-area .section-title h2 {
@@ -692,11 +711,11 @@ img {
 .fun-fact-area {
     color: #fff;
     position: relative;
-    background: #3f8ed9;
+    background: var(--gray-600);
 }
 
 .fun-fact {
-    background: #72b4e6;
+    background: var(--gray-800);
     text-align: center;
     padding: 20px;
     border-radius: 15px;
@@ -967,11 +986,15 @@ img {
 *                                   11. Client area css
 * --------------------------------------------------------------------------------------- */
 .faq-area {
-    background-color: #f5f5f5;
+    background-color: var(--gray-100);
+}
+
+.faq-area h2 {
+    color: var(--gray-700);
 }
 
 .accordion .panel-heading {
-    background: #3f8ed9;
+    background: var(--gray-800);
     border-radius: 5px;
 }
 
@@ -998,7 +1021,11 @@ img {
 .panel-group .panel+.panel {
     border: none !important;
     box-shadow: none !important;
-    background-color: #f5f5f5;
+    background-color: var(--gray-100);
+}
+
+.panel {
+    border: none;
 }
 
 /* ----------------------------------------------------------------------------------------
@@ -1026,7 +1053,7 @@ img {
 *                                   12. Contact area css
 * --------------------------------------------------------------------------------------- */
 .contact-form {
-    background-color: #f5f5f5;
+    background-color: var(--gray-700);
     padding: 30px;
     padding-top: 20px;
     border-radius: 10px;
@@ -1041,8 +1068,8 @@ img {
     padding: 5px 0px;
     font-size: 16px;
     line-height: 1.42857143;
-    color: #333;
-    background-color: #f5f5f5;
+    color: var(--gray-100);
+    background-color: var(--gray-700);
     background-image: none;
     border-radius: 0px;
     box-shadow: none;
@@ -1088,6 +1115,7 @@ img {
 
 .success {
     background: #fff none repeat scroll 0 0;
+    border-radius: 5px;
     color: #50B948;
     font-weight: 700;
     padding: 20px;
@@ -1108,7 +1136,7 @@ img {
 
 .address {
     padding: 30px;
-    background: #f5f5f5;
+    background: var(--gray-700);
     border-radius: 10px;
 }
 
@@ -1170,7 +1198,7 @@ img {
 *                                   13. Footer area css
 * --------------------------------------------------------------------------------------- */
 .footer-area {
-    background: #72849c;
+    background: var(--gray-600);
     color: #fff;
     text-align: center;
 }
