--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -773,7 +773,7 @@ background: linear-gradient(180deg, rgba(8,6,9,1) 41%, rgba(8,6,9,0.871586134453
     min-height: 212px;
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-evenly;
     align-items: center;
     gap: 15px;
 }
@@ -1273,32 +1273,29 @@ background: linear-gradient(180deg, rgba(8,6,9,1) 10%, rgba(8,6,9,0.882790616246
 }
 
 .social-links {
-    overflow: hidden;
+    display: flex;
+    align-items: center;
+    gap: 15px;
     margin-top: 30px;
 }
 
 .social-links li {
-    list-style: none;
-    float: left;
-    margin-right: 10px;
-}
-
-.social-links li a i {
-    width: 55px;
-    height: 45px;
-    line-height: 45px;
-    text-align: center;
-    transition: 0.3s;
-    -moz-transition: 0.3s;
-    -webkit-transition: 0.3s;
-    color: #fff;
-    background-color: #3f8ed9;
-    font-size: 25px;
     border-radius: 5px;
+    list-style: none;
+    background-color: #3f8ed9;
+    
 }
 
-.social-links li a:hover i {
-    background-color: #72849c;
+.social-links li a {
+    display: block;
+    width: 100%;
+    height: 100%;
+    padding: 10px;
+    transition: .2s;
+}
+
+.social-links li a:hover {
+    transform: scale(1.05);
 }
 
 
@@ -1320,6 +1317,10 @@ background: linear-gradient(180deg, rgba(8,6,9,1) 10%, rgba(8,6,9,0.882790616246
 .footer-area p {
     margin: 0;
     line-height: 60px;
+}
+
+.footer-area a {
+    cursor: pointer;
 }
 
 
