--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -6,6 +6,28 @@
 * ---------------------------------------------------------------------------------------- */
 
 
+@media (min-width: 768px) and (max-width: 1200px) {
+    .navbar-header {
+        display: flex;
+        justify-content: center;
+        margin-bottom: 10px;
+        float: none;
+    }
+
+    .navbar-right {
+        float: none !important;
+    }
+
+    .navbar-nav {
+        float: none;
+        font-size: 13px;
+    }
+
+    .navbar-nav li a {
+        font-size: 13px;
+    }
+}
+
 /* Medium Layout */
 @media ( max-width: 992px ) {
     .intro-text .row {
@@ -157,9 +179,6 @@
     }
     img {
         max-width: 100%;
-    }
-    .skill-area {
-        padding-top: 0px;
     }
 
     .navbar-toggle {
