--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,7 +113,7 @@ body {
 
 body {
     background-color: var(--gray-900);
-    color: #777;
+    color: #c1c1c1;
     width: 100%;
     height: 100%;
     font-size: 15px;
