--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1143,6 +1143,10 @@ background: linear-gradient(180deg, rgba(8,6,9,1) 10%, rgba(8,6,9,0.882790616246
     border: none;
 }
 
+.panel-body-text {
+    color: var(--gray-800);
+}
+
 /* ----------------------------------------------------------------------------------------
 *                                   11. Client area css
 * --------------------------------------------------------------------------------------- */
